Directly abort failed index build on primary driven index builds

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-11-24
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The concept of commit voting only makes sense when nodes are independently building indexes. When index builds are driven by primary, we should just abort directly instead of signaling itself to abort.

            Assignee:
            Wei Hu
            Reporter:
            Wei Hu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: