SERVER-113823 Directly abort failed index build on primary driven index builds (#43906)

GitOrigin-RevId: 462ce2746864e8e5bb10046a6c8ffa91f5c68653